user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: shop-zone
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: user-service
